TestSuite/Syntax/Errors/DepLoop8.tjp
project prj "Loop Detector Test" "$Id" 2000-01-01 - 2000-01-04

task t1 "Task1" {
	end 2000-01-04
	
	task s1 "Sub1" {
		length 1d
		precedes !!t3.s1
	}
}

task t2 "Task2" {
	precedes !t1
	task s1 "Sub1" {
		length 1d
	}
}

task t3 "Task3" {
	task s1 "Sub1" {
		length 1d
		precedes !!t2
	}
}

